objects/Title_Update__e.object
<CustomObject>
    <description>Any Update to Title Status will trigger platform event creation</description>
    <fields>
        <fullName>event_type__c</fullName>
        <label>event type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>ACV Titles External id</description>
        <label>id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesforce_id__c</fullName>
        <description>Casesafe salesforce id</description>
        <label>salesforce id</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>seller_payment_date__c</fullName>
        <label>seller payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>seller_payment_method__c</fullName>
        <label>seller payment method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>seller_payment_tracking_number__c</fullName>
        <label>seller payment tracking number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title_received_date__c</fullName>
        <label>title received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>title_sent_date__c</fullName>
        <label>title sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>title_state__c</fullName>
        <label>title state</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tracking_number__c</fullName>
        <label>tracking number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Title Update</label>
    <pluralLabel>Title Updates</pluralLabel>
</CustomObject>